infra/k8s/tickets-postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-postgres
  template:
    metadata:
      labels:
        app: tickets-postgres
    spec:
      containers:
        - name: tickets-postgres
          image: postgres
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-postgres-srv
spec:
  selector:
    app: tickets-postgres
  ports:
    - port: 5432
      name: db
      targetPort: 5432
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: port-ex-pg
# spec:
#   type: NodePort
#   selector:
#     app: tickets-postgres
#   ports:
#     - nodePort: 31234
#       port: 5432
#       targetPort: 5432
